# wjssd2

./: CMakeLists.txt  README.md  report.md
meshark/: CMakeLists.txt  README.md
meshark/apps/: simplify.cc
meshark/include/meshark/: element-data.h  element-decl.h  element-set.h  geometry-mesh.h  half-edge-mesh.h  mesh-elements.h  mesh-io.h  mesh-simplifier.h  mesh-type-traits.h
meshark/include/mystl/: observer-ptr.h
meshark/src/: geometry-mesh.cc  mesh-io.cc  mesh-simplifier.cc  simple_test.cc
